2012-11-26  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_state_reset),
	(gst_ttmlparse_cleanup), (gst_ttmlparse_sink_event):
	  - Handle Flush Stop events.

2012-11-26  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_active_spans_add),
	(gst_ttmlparse_attribute_parse),
	(gst_ttmlparse_attribute_new_time_container),
	(gst_ttmlparse_attribute_new_begin),
	(gst_ttmlparse_attribute_new_dur),
	(gst_ttmlparse_state_set_attribute),
	(gst_ttmlparse_state_get_attribute),
	(gst_ttmlparse_add_characters), (gst_ttmlparse_sax_element_start),
	(gst_ttmlparse_sax_element_end), (gst_ttmlparse_sax_characters),
	(gst_ttmlparse_state_reset):
	* src/gstttmlprivate.h:
	  - Support the timeContainer attribute and the Sequential mode. This
	    completes the support for the #timing feature.
	  - Drop buffers with null time lapse earlier.
	  - Fix <br /> nodes.
	  - Some more MEMDUMP of span contents.

2012-11-23  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.2 ===

2012-11-23  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlprivate.h:
	  - Provide a replacement for GST_MEMDUMP on older GStreamers

2012-11-23  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.1 ===

2012-11-23  Xavi Artigas  <xartigas@fluendo.com>

	* src/Makefile.am:
	  - Added missing dependency with gstttmlprivate.h

2012-11-23  Xavi Artigas  <xartigas@fluendo.com>

	* Makefile.am:
	  - Remove dependency with LICENSE.LGPL

2012-11-23  Fluendo <support@fluendo.com>

	* gst-fluendo-ttml.spec.in: Remove unnecessary dependencies.

2012-11-23  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_span_compose),
	(gst_ttmlparse_send_buffer), (gst_ttmlparse_event_new_span_end),
	(gst_ttmlparse_timeline_flush), (gst_ttmlparse_add_characters),
	(gst_ttmlparse_sax_document_end), (gst_ttmlparse_cleanup):
	* src/gstttmlprivate.h: